--- a/index.html
+++ b/index.html
@@ -179,27 +179,28 @@
 
       <!-- Pricing Items -->
       <div class="pricing__item">
-        <p>Mars</p>
-        <p><span>$</span>2000</p>
-        <div class="features">
-          <div class="features__item">
-            <img src="" alt="">
+        <img class="pricing__item__img" src="./assets/Mars.svg" alt="">
+        <p class="pricing__item__title">Mars</p>
+        <p class="pricing__item__price"><span class="pricing__item__price--accent">$</span>2000</p>
+        <div class="pricing__item__features">
+          <div class="pricing__item__features__item">
+            <img src="./assets/Pricing Item Features Icon.svg" alt="">
             <p>Single Landing Page</p>
           </div>
-          <div class="features__item">
-            <img src="" alt="">
+          <div class="pricing__item__features__item">
+            <img src="./assets/Pricing Item Features Icon.svg" alt="">
             <p>Unlimited Edits</p>
           </div>
-          <div class="features__item">
-            <img src="" alt="">
+          <div class="pricing__item__features__item">
+            <img src="./assets/Pricing Item Features Icon.svg" alt="">
             <p>Custom Design</p>
           </div>
-          <div class="features__item">
-            <img src="" alt="">
+          <div class="pricing__item__features__item">
+            <img src="./assets/Pricing Item Features Icon.svg" alt="">
             <p>24/7 Customer Support</p>
           </div>
-          <div class="features__item">
-            <img src="" alt="">
+          <div class="pricing__item__features__item">
+            <img src="./assets/Pricing Item Features Icon.svg" alt="">
             <p>Lifetime Updates</p>
           </div>
         </div>
